Bug 1211658 - GUM constraints for screen sharing don't affect framerate. r=jib

--HG--
extra : amend_source : 65a2228c2b6dd90c4d59d3d9246af7bc1558f41a